@@ -42,7 +42,3 @@
 
  - WebNIC registrar support
 	- See email from Winnie Lee
-
- - Scheduled / manual backup logs
-	- Capture and show full output
-	- CHANGELOG
