@@ -4923,9 +4923,34 @@ backuplog_days=Showing logs from last $1 days ..
 backuplog_when=Started
 backuplog_len=Run time
 backuplog_size=Final size
-backuplog_ok=OK?
+backuplog_ok=Search
 backuplog_nomatch=No backup logs matching your search were found.
 backuplog_none=No backups have been logged yet.
 backuplog_none2=No backups that you have access to have been logged.
 backuplog_doms=$1 domains
 backuplog_nodoms=No domains
+backuplog_return=backup log listing
+
+viewbackup_title=View Backup Log
+viewbackup_eid=Missing or invalid backup ID!
+viewbackup_egone=Logged backup does not exist!
+viewbackup_header=Backup details
+viewbackup_dest=Backup destination
+viewbackup_doms=Virtual servers included
+viewbackup_mode=Executed via
+viewbackup_mode_api=Command line
+viewbackup_mode_sched=Scheduled backup
+viewbackup_mode_cgi=Virtualmin UI
+viewbackup_user=Run by web user
+viewbackup_cmd=None (scheduled or command line)
+viewbackup_start=Started at
+viewbackup_end=Completed at
+viewbackup_size=Final backup size
+viewbackup_output=Full backup output
+viewbackup_time=Run time
+viewbackup_inc=Basckup type
+viewbackup_inc1=Incremental
+viewbackup_inc0=Full
+viewbackup_ok=Final status
+viewbackup_success=Succeeded
+viewbackup_failure=Failed
